--- a/development/nodeDocker/src/App.css
+++ b/development/nodeDocker/src/App.css
@@ -1,3 +1,5 @@
+/* Basic CSS for some animations and extra colouring */
+
 .App {
   text-align: center;
 }
@@ -53,9 +55,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 2rem; /* space from top */
+    padding-top: 2rem;
     min-height: 100vh;
-    background-color: #f0f0f0; /* optional */
+    background-color: #f0f0f0;
 }
 
 .check-data {
@@ -231,13 +233,6 @@ button:active {
     right: 10px;
 }
 
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -251,6 +246,13 @@ button:active {
 
 .App-link {
   color: #61dafb;
+}
+
+/* Keyframe animations */
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 @keyframes App-logo-spin {
